# social-auto-upload

./: .gitignore  README.md  pyproject.toml  requirements.txt  sau_cli.py  sau_platform_server.py  sau_platform_worker.py  发布前检查清单.md  联调收口说明.html
docs/: install.md  legacy-web.md  platform-mvp.md
docs/superpowers/plans/: 2026-06-26-platform-evolution-plan.md  2026-06-26-platform-roadmap-tasks.md
sau/: __init__.py  models.py  runtime.py  services.py
sau_ai/: __init__.py  openai_compat.py
sau_frontend/: package.json  vite.config.js
sau_frontend/src/: App.vue  main.js
sau_frontend/src/api/: client.js
sau_frontend/src/components/: AppDetailGrid.vue  AppEmpty.vue  AppEntityListItem.vue  AppFilterFields.vue  AppFormCard.vue  AppFormFields.vue  AppListToolbar.vue  AppLoading.vue  AppNextStep.vue  AppReadonlyNotice.vue  (+2 more)
sau_platform/: __init__.py  app.py  auth.py  models.py  service.py  storage.py
sau_platform_console/: index.html
sau_platform_console/assets/: api.js  app.js  page_approvals.js  page_auth.js  page_content.js  page_dashboard.js  page_plans.js  page_settings.js  page_tasks.js  router.js  styles.css  ui.js
sau_platform_console_vue/: index.html  package.json  tsconfig.json  vite.config.ts
sau_platform_console_vue/src/: App.vue  main.ts  style.css
tencent-acceptance/: tencent-acceptance.html
tests/: test_sau_platform_app.py  test_sau_services.py
uploader/douyin_uploader/: main.py
uploader/tencent_uploader/: main.py
uploader/xiaohongshu_uploader/: main.py
uploader/youtube_uploader/: main.py
youtube-acceptance/: youtube-acceptance.html
(+49 files in other folders)
