[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "social-auto-upload"
version = "0.1.0"
description = "Social media auto uploader"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
  "loguru==0.7.3",
  "opencv-python>=4.13.0.92",
  "patchright==1.58.2",
  "qrcode==8.2",
  "requests==2.32.3",
  "segno>=1.6.6",
]

[project.scripts]
sau = "sau_cli:main"
sau-platform = "sau_platform_server:main"
sau-platform-worker = "sau_platform_worker:main"

[project.optional-dependencies]
web = [
  "Flask[async]==3.1.1",
  "flask-cors==6.0.0",
]
platform = [
  "Flask==3.1.1",
]

[tool.uv]
package = true

[tool.setuptools]
py-modules = ["cli_main", "conf", "sau_cli", "sau_platform_server", "sau_platform_worker"]
include-package-data = true

[tool.setuptools.packages.find]
include = ["sau*", "sau_ai*", "sau_platform*", "uploader*", "utils*", "myUtils*"]

[tool.setuptools.package-data]
utils = ["stealth.min.js"]
